--- a/views/friends.erb
+++ b/views/friends.erb
@@ -11,7 +11,9 @@
 
     <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
 
-    
+    <% @friends.each do |friend| %>
+      <h2><%= @friends %></h2>
+    <% end %>
 
 
   </body>
